--- a/src/pages/projects/ui/projects.scss
+++ b/src/pages/projects/ui/projects.scss
@@ -2,6 +2,7 @@
 	&-wrapper {
 		display: flex;
 		flex-wrap: wrap;
+		gap:  20px 0 ;
 		margin-top: 50px;
 		align-items: center;
 		justify-content: space-around;
